--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,12 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Portfolio</title>
-</head>
-<body>
-    <h1>Welcome to My Portfolio Site</h1>
-    <p>This is just the beginning 🎯</p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Home | My Portfolio{% endblock %}
+{% block content %}
+<h1>Welcome!</h1>
+<p>This is my software development portfolio.</p>
+{% endblock %}
